option('lkl_root', type: 'string',
    value: '',
    description: 'Path to LKL build directory (contains liblkl.a and include/)')

option('lkl_shared', type: 'boolean',
    value: false,
    description: 'Link LKL dynamically via liblkl.so (from lkl_root/lib/)')

option('glib_root', type: 'string',
    value: '',
    description: 'Path to GLib source tree (must have build-static/ with .a files)')

option('enable_gio', type: 'boolean',
    value: false,
    description: 'Enable GIO block backend (requires glib_root)')

option('qemu_root', type: 'string',
    value: '',
    description: 'Path to QEMU source tree')

option('qemu_build', type: 'string',
    value: '',
    description: 'Path to QEMU build directory (contains libblock.a etc.)')

option('enable_qemu', type: 'boolean',
    value: false,
    description: 'Enable QEMU block backend (requires qemu_root and qemu_build)')

option('enable_ksmbd', type: 'boolean',
    value: false,
    description: 'Enable ksmbd SMB3 server (requires ksmbd_tools_root and slirp)')

option('ksmbd_tools_root', type: 'string',
    value: '',
    description: 'Path to ksmbd-tools source tree')

option('qemu_shared', type: 'boolean',
    value: false,
    description: 'Link QEMU block backend dynamically via libanyfs-qemu.so')
