option('lkl_dist', type: 'combo',
    choices: ['linux-amd64', 'mingw32', 'mingw64', ''],
    value: 'linux-amd64',
    description: 'Pick a prebuilt out-of-tree LKL distribution under ./lkl-<dist>/ '
        + '(holds generated headers + liblkl.a/.so/.dll). Set to "" to use lkl_root instead.')

option('lkl_root', type: 'string',
    value: '',
    description: 'Path to LKL tools/lkl/ build directory (contains liblkl.a and include/). '
        + 'Overrides lkl_dist when non-empty.')

option('lkl_src', type: 'string',
    value: '${LINUX_SRC}',
    description: 'Path to the Linux kernel source tree (provides tools/lkl/include/lkl.h '
        + 'and the arch/lkl/include/{asm,uapi} source headers).')

option('lkl_shared', type: 'boolean',
    value: false,
    description: 'Link LKL dynamically via liblkl.so (from lkl_root/lib/)')

option('glib_root', type: 'string',
    value: '',
    description: 'Path to GLib source tree (must have build-static/ with .a files)')

option('enable_gio', type: 'boolean',
    value: false,
    description: 'Enable GIO block backend (requires glib_root)')

option('qemu_root', type: 'string',
    value: '',
    description: 'Path to QEMU source tree')

option('qemu_build', type: 'string',
    value: '',
    description: 'Path to QEMU build directory (contains libblock.a etc.)')

option('enable_qemu', type: 'boolean',
    value: false,
    description: 'Enable QEMU block backend (requires qemu_root and qemu_build)')

option('enable_ksmbd', type: 'boolean',
    value: false,
    description: 'Enable ksmbd SMB3 server (requires ksmbd_tools_root and slirp)')

option('ksmbd_tools_root', type: 'string',
    value: '',
    description: 'Path to ksmbd-tools source tree')

option('qemu_shared', type: 'boolean',
    value: false,
    description: 'Link QEMU block backend dynamically via libanyfs-qemublk.so')

option('enable_fuse', type: 'boolean',
    value: false,
    description: 'Enable FUSE frontend (anyfs-fuse)')

option('enable_winfsp', type: 'boolean',
    value: false,
    description: 'Enable WinFSP FUSE frontend for Windows (anyfs-winfsp.exe)')

option('winfsp_root', type: 'string',
    value: '',
    description: 'Path to WinFSP source tree (contains inc/ and opt/fsext/lib/)')
